# iot-condition-monitor

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  DHT22.c  DHT22.h  app_nvs.c  app_nvs.h  aws_iot.c  aws_iot.h  http_server.c  http_server.h  led_interface.c  led_interface.h  main.c  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/webpage/: app.css  app.js  index.html
